kube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocs
  labels:
    app: ocs
