kube/auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocs-auth
spec:
  selector:
    app: ocs-auth
  ports:
    - port: 80
      targetPort: 8082
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocs-auth
  labels:
    app: ocs-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocs-auth
  template:
    metadata:
      labels:
        app: ocs-auth
    spec:
      containers:
      - name: ocs-auth
        image: blerch-dev/ocs-auth:latest
        ports:
          - containerPort: 8082
        # env:
        #   - name: DB_URL
        #     value: db-url.local
        imagePullPolicy: Never
        # resources:
        #   requests:
        #     memory: "64Mi"
        #     cpu: "250m"
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
