kube/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocs-client
spec:
  selector:
    app: ocs-client
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocs-client
  labels:
    app: ocs-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ocs-client
  template:
    metadata:
      labels:
        app: ocs-client
    spec:
      containers:
      - name: ocs-client
        image: blerch-dev/ocs-client:latest
        ports:
          - containerPort: 8080
        # env:
        #   - name: DB_URL
        #     value: db-url.local
        imagePullPolicy: Never
        # resources:
        #   requests:
        #     memory: "64Mi"
        #     cpu: "250m"
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
