kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: client.ocs.cluster
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ocs-client
                port:
                  number: 80
    - host: auth.ocs.cluster
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ocs-auth
                port:
                  number: 80
    - host: chat.ocs.cluster
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ocs-chat
                port:
                  number: 80
